# wasmDemo

./: README.md
Go/WASM_and_GO_interact/Callback_functions/: index.html  main.go
Go/WASM_and_GO_interact/Go_DOM/: go.mod  main.go
Go/WASM_and_GO_interact/Go_calls_JS/: main.wasm
Go/WASM_and_GO_interact/JS_calls_Go/: main.wasm
Go/compile_test/go_wasi/: hello.go
Go/compile_test/go_wasm/: go.mod  go.sum
Go/example/: go.mod  handle.js  json.go
Go/linearMemory/: go.mod  index.html  index.js  main.go  main.wasm
Go_Rust/Go_Rust/add/: add.go  go.mod
Rust/ImportAndExport/main/: hello.js
Rust/ImportAndExport/print/src/: main.rs
Rust/ImportAndExport/user_define_function/: double.js
Rust/ImportAndExport/user_define_function/src/: main.rs
Rust/hello/: Cargo.toml
Rust/passingstring/command_line_arguments/: conmand_line.js
Rust/passingstring/string/: string.js
Rust/passingstring/string/src/: main.rs
runtime/runtimeCompare/sockets/wasmer/wasix-axum/: Cargo.toml
runtime/runtimeCompare/sockets/wasmer/wasix-axum/src/: main.rs
wasm/Go/WASM_and_GO_interact/Callback_functions/: go.mod  main.wasm
wasm/Go/WASM_and_GO_interact/Go_DOM/: index.html  main.wasm
wasm/Go/WASM_and_GO_interact/Go_calls_JS/: go.mod  index.html  main.go
wasm/Go/WASM_and_GO_interact/JS_calls_Go/: go.mod  index.html
wasm/Go/compile_test/go_wasi/: go.mod  hello.wasm
wasm/Go/compile_test/go_wasm/: hello.go  hello.html  main.wasm
wasm/Go/example/: index.html  main.wasm
wasm/Go/linearMemory/: index.html  main.wasm
wasm/Rust/hello/: hello.rs
wasm/Rust/no_std/src/: main.rs
(+11 files in other folders)
